add instant search using listjs

--- a/index.html
+++ b/index.html
@@ -2,14 +2,18 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <meta name="viewport" content="width=device-width">
-        <title>Airport Wifi</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Free Airport Wifi</title>
         <link rel="stylesheet" href="style.css">
     </head>
-
     <body>
-        <h1>Airport Wifi</h1>
+        <h1>Free Airport Wifi</h1>
+        <div id="airport-list">
+            <input type="search" placeholder="search..." class="search" />
+            <div class="list">
+            </div>
+        </div>
+        <script src="lib/list.min.js"></script>
         <script src="app.js"></script>
     </body>
 </html>
